--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,8 @@
 
   <!-- Agregar tarea component contenedor -->
   <div #addCompContainer></div>
-  <!--<app-add-task></app-add-task>-->
+
+  <!-- Lista de tareas -->
   <div class="list-group" class="mat-elevation-z2">
     <div *ngFor="let task of getTasks()" href="#" class="list-group-item list-group-item-action flex-column align-items-start">
       <div class="d-flex w-100 justify-content-between">
